infrastructure/openbao/openbao-networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: openbao-ingress-egress
  namespace: openbao
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: openbao
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: databases
            cnpg.io/cluster: postgis-cluster
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: vso-system
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: cert-manager
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: tekton-pipelines
            app: tekton-chains-controller
      toPorts:
        - ports:
            - port: "8200"
              protocol: TCP
